--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "axios": "^1.13.1",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "remixicon": "^4.7.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.26.3",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.14"
   },
